--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+tomcat7 (7.0.26-4) UNRELEASED; urgency=low
+
+  * Address regression leaving ROOT webapp files after purge.  
+    (Closes: #670440)
+  * Update copyright year in javadoc to 2012.
+
+ -- tony mancill <tmancill@debian.org>  Mon, 28 May 2012 18:45:07 -0700
+
 tomcat7 (7.0.26-3) unstable; urgency=low
 
   * Team upload.
