--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tomcat7 (7.0.27-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- tony mancill <tmancill@debian.org>  Thu, 07 Jun 2012 22:43:21 -0700
+
 tomcat7 (7.0.26-4) unstable; urgency=low
 
   * Address regression leaving ROOT webapp files after purge.  
