--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+tomcat7 (7.0.27-2) UNRELEASED; urgency=low
+
+  * Add Slovak debconf translation (Closes: #677913).
+    - Thanks to Ivan Masár.
+
+ -- Miguel Landaeta <miguel@miguel.cc>  Sun, 17 Jun 2012 19:03:41 -0430
+
 tomcat7 (7.0.27-1) unstable; urgency=low
 
   * New upstream release.
