--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-tomcat7 (7.0.28-2) UNRELEASED; urgency=low
+tomcat7 (7.0.28-2) unstable; urgency=low
 
   [ Jakub Adam ]
   * Ensure webapps/examples/WEB-INF/lib exists before files are
