--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,13 @@
 tomcat7 (7.0.28-3) UNRELEASED; urgency=low
 
+  [ Miguel Landaeta ]
   * Fix small typo in README.Debian.
 
- -- Miguel Landaeta <miguel@miguel.cc>  Tue, 18 Sep 2012 18:57:45 -0430
+  [ tony mancill ]
+  * Use ucf and a template for /etc/logrotate.d/tomcat6 file to avoid
+    updating the shipped conffile. (Closes: #688936)
+
+ -- tony mancill <tmancill@debian.org>  Thu, 27 Sep 2012 10:55:35 -0700
 
 tomcat7 (7.0.28-2) unstable; urgency=low
 
