--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+tomcat7 (7.0.39-1~exp1) UNRELEASED; urgency=low
+
+  * New upstream release.
+  * Refresh patches:
+    - 0009-Use-java.security.policy-file-in-catalina.sh.patch
+  * Remove patches included in the upstream release:
+    - 0016_upstream_bug_54440.patch
+  * Bump Standards-Version to 3.9.4. No changes were required.
+
+ -- Miguel Landaeta <miguel@miguel.cc>  Sun, 31 Mar 2013 19:09:41 -0300
+
 tomcat7 (7.0.35-1~exp2) experimental; urgency=low
 
   * Switch from Commons DBCP to Tomcat JDBC Pool as default connection
