--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+tomcat7 (7.0.40-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+  * Refresh patches:
+    - 0015_disable_test_TestCometProcessor.patch
+
+ -- Miguel Landaeta <miguel@miguel.cc>  Fri, 10 May 2013 19:10:36 -0300
+
 tomcat7 (7.0.39-1) unstable; urgency=low
 
   * Upload to unstable for jessie release cycle.
