--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ tomcat7 (7.0.41-1) unstable; urgency=low
 
   * New upstream release (Closes: #712978).
   * Refresh patches.
+  * Added version check for libtcnative-1
+    (Closes: #712638, lp: #1092548)
 
  -- Gianfranco Costamagna <costamagnagianfranco@yahoo.it>  Wed, 19 Jun 2013 18:06:49 +0200
 
