--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tomcat7 (7.0.42-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Gianfranco Costamagna <costamagnagianfranco@yahoo.it>  Tue, 16 Jul 2013 17:34:58 +0200
+
 tomcat7 (7.0.41-1) unstable; urgency=low
 
   * New upstream release (Closes: #712978).
