--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,13 @@
 tomcat7 (7.0.42-1) unstable; urgency=low
 
   * New upstream release.
+  * Added libhamcrest-java >= 1.3 as build-dep,
+    tweaked debian/rules.
+  * Bumped compat level to 9.
+  * Removed some version checks, newer releases already in oldstable.
+  * Refresh patches.
+  * debian/control: changed Vcs-Git and Vcs-Browser fields,
+    now they are canonical.
 
  -- Gianfranco Costamagna <costamagnagianfranco@yahoo.it>  Tue, 16 Jul 2013 17:34:58 +0200
 
@@ -92,7 +99,7 @@ tomcat7 (7.0.28-4) unstable; urgency=high
 
   * Acknowledge NMU: 7.0.28-3+nmu1 (Closes: #692440)
     - Thank you to Michael Gilbert.
-  * Add patches for the following security issues: (Closes: #695251)
+  0* Add patches for the following security issues: (Closes: #695251)
     - CVE-2012-4431, CVE-2012-3546
 
  -- tony mancill <tmancill@debian.org>  Thu, 06 Dec 2012 22:25:07 -0800
