--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ tomcat8 (8.0.0~RC1-1) UNRELEASED; urgency=low
     - Updated the version of the Servlet, JSP and EL APIs
     - Switch to Java 7
     - Updated the watch file to match the Tomcat 8 releases
+    - Refreshed the patches
   * Use XZ compression for the upstream tarball
   * Replaced Sun Microsystems with Oracle
 
