--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ tomcat8 (8.0.0~RC1-1) UNRELEASED; urgency=low
     - Switch to Java 7
     - Updated the watch file to match the Tomcat 8 releases
     - Refreshed the patches
+    - Updated debian/copyright
   * Use XZ compression for the upstream tarball
   * Replaced Sun Microsystems with Oracle
 
